# cfsem-py

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build_docs.sh  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  actions.yml
cfsem/: __init__.py  bindings.py  types.py
docs/: index.md
docs/javascripts/: mathjax.js
docs/python/: examples.md  filament.md  flux_density.md  grad_shafranov.md  inductance.md  math.md  types.md
docs/stylesheets/: extra.css
examples/: helmholtz.py  inductance.py
src/: lib.rs
test/: test_electromagnetics.py  test_examples.py  test_filaments.py  test_funcs.py  test_gradshafranov.py  test_math.py
